@@ -13,7 +13,7 @@ session_cache_limiter('nocache');
 session_start(); //This causes the double-login problem, where the user needs to login twice when already logged in with the same browser
 
 if (!isset($_SESSION['s_login'])) {
-//	session_regenerate_id();
+ session_regenerate_id();
 }
 
 
@@ -803,26 +803,7 @@ if (isset ($_SESSION['s_login']) && ($GLOBALS['currentTheme'] -> options['sideba
  try {
   //$currentUser = EfrontUserFactory :: factory($_SESSION['s_login']);
   $currentUser = EfrontUser :: checkUserAccess();
-  $entity = getUserTimeTarget($_SERVER['REQUEST_URI']);
-  $lastTime = getUserLastTimeInTarget($entity);
-  if ($lastTime === false) {
-   $fields = array("session_timestamp" => time(),
-       "session_id" => session_id(),
-       "session_expired" => 0,
-       "users_LOGIN" => $_SESSION['s_login'],
-       "timestamp_now" => time(),
-       "time" => 0,
-       "lessons_ID" => $_SESSION['s_lessons_ID'] ? $_SESSION['s_lessons_ID'] : null,
-       "courses_ID" => $_SESSION['s_courses_ID'] ? $_SESSION['s_courses_ID'] : null,
-       "entity" => current($entity),
-       "entity_id" => key($entity));
-   eF_insertTableData("user_times", $fields);
-   $_SESSION['time'] = 0;
-  } else {
-   eF_updateTableData("user_times", array("session_expired" => 0), "session_id='".session_id()."' and users_LOGIN='".$_SESSION['s_login']."'");
-   $_SESSION['time'] = $lastTime;
-  }
-  $_SESSION['timestamp'] = time();
+  refreshLogin();
   if ($accounts = unserialize($currentUser -> user['additional_accounts'])) {
    $result = eF_getTableData("users", "login, user_type", 'login in ("'.implode('","', array_values($accounts)).'")');
    $smarty -> assign("T_MAPPED_ACCOUNTS", $result);
